[gd_scene load_steps=3 format=2]

[ext_resource path="res://World/CharacterSelect.gd" type="Script" id=1]
[ext_resource path="res://icon - Copy.png" type="Texture" id=2]

[node name="CharacterSelect" type="Node2D"]
scale = Vector2( 3, 3 )
script = ExtResource( 1 )

[node name="Frostmage" type="Button" parent="."]
modulate = Color( 0.647059, 0.647059, 0.639216, 1 )
self_modulate = Color( 0, 0.976471, 1, 1 )
margin_left = 265.887
margin_top = 166.069
margin_right = 410.887
margin_bottom = 236.069
text = "Frostmage"
icon = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Warlock" type="Button" parent="."]
modulate = Color( 0.27451, 0.0470588, 0.392157, 1 )
margin_left = 25.617
margin_top = 69.7842
margin_right = 154.617
margin_bottom = 139.784
text = "Warlock"
icon = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Warrior" type="Button" parent="."]
self_modulate = Color( 0.223529, 0.152941, 0, 1 )
margin_left = 485.839
margin_top = 48.5839
margin_right = 610.839
margin_bottom = 118.584
text = "Warrior"
icon = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Rogue" type="Button" parent="."]
self_modulate = Color( 1, 0.862745, 0.356863, 1 )
margin_left = 68.9008
margin_top = 272.07
margin_right = 185.901
margin_bottom = 342.07
text = "Rogue"
icon = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Hunter" type="Button" parent="."]
margin_left = 315.354
margin_top = 311.82
margin_right = 371.354
margin_bottom = 331.82
text = "Hunter"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Priest" type="Button" parent="."]
margin_left = 182.852
margin_top = 25.617
margin_right = 231.852
margin_bottom = 45.617
text = "Priest"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Necromancer" type="Button" parent="."]
margin_left = 486.722
margin_top = 207.586
margin_right = 584.722
margin_bottom = 227.586
text = "Necromancer"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Firemage" type="Button" parent="."]
margin_left = 356.871
margin_top = 30.917
margin_right = 427.871
margin_bottom = 50.917
text = "Firemage"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Frostmage" to="." method="_on_Frostmage_pressed"]
[connection signal="pressed" from="Warlock" to="." method="_on_Warlock_pressed"]
[connection signal="pressed" from="Warrior" to="." method="_on_Warrior_pressed"]
[connection signal="pressed" from="Rogue" to="." method="_on_Rogue_pressed"]
